# SAG

./: CMakeLists.txt  remove_sh
CD/: Dockerfile
src/api/: app.py  parsers.py
src/calculators/: main.cpp
src/calculators/beam_elements/: beam_element.cpp  beam_element.h
src/calculators/data/: continuous_incl.txt
src/calculators/fea_core/: bha_component.h  fea_results.cpp  fea_results.h  fea_solver.cpp  fea_solver.h  slide_sheet.h  trajectory.cpp  trajectory.h  tvd_assurance_workflow.cpp  tvd_assurance_workflow.h
src/utils/: file_readers.cpp  file_readers.h  file_readers_slide_sheet.cpp
src/utils/validation/: sag_correction_validator.cpp  sag_correction_validator.h
